erDiagram
    USERS {
        int id PK
        string email UK "Unique, not null"
        string password_hash "bcrypt hashed"
        string role "admin | user"
        boolean is_default_pin "First-time login flag"
        boolean is_approved "Approved for file access"
        datetime created_at "Default: utcnow"
        datetime last_login "Nullable"
        string cert_serial_number "Current cert serial, nullable"
        boolean cert_revoked "Default: false"
        datetime cert_issued_at "Nullable"
        datetime cert_expires_at "Nullable"
    }

    GROUPS {
        int id PK
        string name UK "Unique, not null"
        string description "Nullable"
        datetime created_at "Default: utcnow"
        datetime updated_at "Auto-updated"
    }

    GROUP_MEMBERSHIPS {
        int id PK
        int group_id FK "References groups.id"
        int user_id FK "References users.id"
        datetime created_at "Default: utcnow"
    }

    GROUP_PERMISSIONS {
        int id PK
        int group_id FK "References groups.id"
        string folder_path "Max 1024 chars"
        boolean can_read "Default: false"
        boolean can_write "Default: false"
        datetime created_at "Default: utcnow"
    }

    FOLDER_PERMISSIONS {
        int id PK
        int user_id FK "References users.id"
        string folder_path "Max 1024 chars"
        string can_read "Tri-state: allow, deny, or null"
        string can_write "Tri-state: allow, deny, or null"
        datetime created_at "Default: utcnow"
    }

    DOMAIN_CONFIGS {
        int id PK
        string domain UK "Unique, not null"
        datetime created_at "Default: utcnow"
        datetime updated_at "Auto-updated"
    }

    DOMAIN_PERMISSIONS {
        int id PK
        int domain_id FK "References domain_configs.id"
        string folder_path "Max 1024 chars"
        boolean can_read "Default: false"
        boolean can_write "Default: false"
        datetime created_at "Default: utcnow"
    }

    SYSTEM_SETTINGS {
        int id PK
        string mode "open or protected"
        string auth_method "email, email+password, username+password"
        boolean tls_enabled "Default: true"
        int https_port "Default: 8443"
        string device_name "Display name"
        string allowed_domains "Comma-separated domain list"
        boolean smtp_enabled "Default: false"
        string smtp_host "Email server host"
        int smtp_port "Default: 587"
        string smtp_username "Email account"
        string smtp_password "Email password"
        string smtp_from_email "Sender address"
        boolean smtp_use_tls "Default: true"
    }

    REVOKED_CERTIFICATES {
        int id PK
        string serial_number "Indexed, not null"
        int user_id FK "References users.id, SET NULL"
        datetime revoked_at "Default: utcnow"
        string reason "admin_revoked, expiry_approaching, cn_mismatch_abuse, reissued"
        int revoked_by FK "References users.id, SET NULL"
    }

    MTLS_MISMATCH_LOGS {
        int id PK
        string presented_cn "Indexed, not null"
        int authenticated_user_id FK "References users.id, CASCADE"
        datetime timestamp "Default: utcnow"
    }

    AUDIT_LOGS {
        int id PK
        datetime timestamp "Default: utcnow, indexed"
        int user_id FK "References users.id, SET NULL"
        string user_email "Denormalized for log retention"
        string action "Action type, indexed"
        string target_type "Entity type"
        string target_id "Entity ID"
        string description "Human-readable description"
        string ip_address "Request IP"
        string status "success, failure, etc."
        text metadata_json "Structured JSON metadata"
    }

    USERS ||--o{ GROUP_MEMBERSHIPS : "belongs to"
    GROUPS ||--o{ GROUP_MEMBERSHIPS : "has"
    GROUPS ||--o{ GROUP_PERMISSIONS : "has"
    USERS ||--o{ FOLDER_PERMISSIONS : "has overrides"
    DOMAIN_CONFIGS ||--o{ DOMAIN_PERMISSIONS : "has"
    USERS ||--o{ REVOKED_CERTIFICATES : "has revoked"
    USERS ||--o{ MTLS_MISMATCH_LOGS : "has mismatches"
    USERS ||--o{ AUDIT_LOGS : "performed"
